cmake_minimum_required(VERSION 3.20)

set(T6_BASE_VERSION_MAJOR 0)
set(T6_BASE_VERSION_MINOR 1)
set(T6_BASE_VERSION_PATCH 0)
set(T6_BASE_VERSION ${T6_BASE_VERSION_MAJOR}.${T6_BASE_VERSION_MINOR}.${T6_BASE_VERSION_PATCH})

project(
  T6Base
  LANGUAGES CXX ASM
  VERSION ${T6_BASE_VERSION}
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED 1)

add_subdirectory(src)