cmake_minimum_required(VERSION 3.20)

set(T6_BASE_VERSION_MAJOR 0)
set(T6_BASE_VERSION_MINOR 1)
set(T6_BASE_VERSION_PATCH 0)
set(T6_BASE_VERSION ${T6_BASE_VERSION_MAJOR}.${T6_BASE_VERSION_MINOR}.${T6_BASE_VERSION_PATCH})

project(
  T6Base
  LANGUAGES CXX ASM
  VERSION ${T6_BASE_VERSION}
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED 1)

include(GNUInstallDirs)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

add_subdirectory(third-party)
add_subdirectory(game)
add_subdirectory(mod)
add_subdirectory(tools)