add_subdirectory(bgame)
add_subdirectory(cgame)
add_subdirectory(cgame_mp)
add_subdirectory(client)
add_subdirectory(client_mp)
add_subdirectory(clientscript)
add_subdirectory(database)
add_subdirectory(ddl)
add_subdirectory(demo)
add_subdirectory(game)
add_subdirectory(live)
add_subdirectory(physics)
add_subdirectory(qcommon)
add_subdirectory(sound)
add_subdirectory(ui)
add_subdirectory(universal)
add_subdirectory(win32)
add_subdirectory(xanim)
